--- a/fromscratch.html
+++ b/fromscratch.html
@@ -42,6 +42,9 @@
     <br>
     <br>
     <br>
+    <br>
+    <a href="https://hannah-wright-17.github.io/IS201/">Professional Resume</a>
+    <br>
     <div class="section">
          <div class="RawHtmlModule-html"><script type="text/javascript" src="https://tableau.byu.edu/javascripts/api/viz_v1.js"></script><div class="tableauPlaceholder" style="width: 1095px; height: 725px; overflow: hidden; position: relative; display: block;"><iframe frameborder="0" marginheight="0" marginwidth="0" title="Data Visualization" allowtransparency="true" allowfullscreen="true" class="tableauViz" width="1095" height="725" style="display: block; margin: 0px; padding: 0px; border: none; width: 1095px; height: 725px;" src="https://tableau.byu.edu/t/MSMBCC/views/ISCareerExplorer3_0MDS6_2_1/ISCareerExplorer?:embed=y&amp;:showVizHome=no&amp;:host_url=https%3A%2F%2Ftableau.byu.edu%2F&amp;:embed_code_version=3&amp;:tabs=yes&amp;:toolbar=yes&amp;:showAppBanner=false&amp;:display_spinner=no&amp;:loadOrderID=0"></iframe></div></div>
     </div>
